# RW_Ocaml

./: .gitignore  LICENSE  sum.ml  sum.native
chapter1/: sum.ml
chapter10/: .merlin  dune  first_class.ml  query_handler.ml
chapter11/: .merlin  dune  objects.ml
chapter2/: functions.ml  functions.native
chapter3/: lists_and_patterns.ml  lists_and_patterns.native
chapter4/: Counter.ml  Counter.mli  freq.ml  freq.native  freq_modular.ml  freq_modular.native
chapter5/: .merlin  dune  records.ml
chapter6/: .merlin  dune  my_blang.ml  variants.ml
chapter7/: .merlin  dune  error_handling.ml
chapter8/: #primative_mutable.ml#  .#primative_mutable.ml  .merlin  dictionary.ml  dictionary.mli  dlist.ml  dlist.mli  dune  imperative_programming.ml  io.ml  loops.ml  primative_mutable.ml
chapter9/: .merlin  dune  foldable.ml  fqueue.ml  fqueue.mli  functors.ml
